@@ -24,7 +24,12 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.zip.Deflater;
 
+import org.apache.commons.math3.util.FastMath;
+
+import se.llbit.chunky.renderer.Postprocess;
 import se.llbit.chunky.renderer.ProgressListener;
+import se.llbit.chunky.renderer.scene.Scene;
+import se.llbit.math.QuickMath;
 
 /**
  * @author Jesper Öqvist <jesper@llbit.se>
@@ -65,10 +70,7 @@ public class PngFileWriter {
 	}
 
 	/**
-	 * Write the image to the file
-	 * @param image
-	 * @param file
-	 * @param progressListener
+	 * Write the image to a PNG file.
 	 */
 	public void write(BufferedImage image, ProgressListener progressListener)
 			throws IOException {
@@ -94,11 +96,7 @@ public class PngFileWriter {
 	}
 
 	/**
-	 * Write the image to the file
-	 * @param image
-	 * @param alpha
-	 * @param file
-	 * @param progressListener
+	 * Write the image to a PNG file.
 	 */
 	public void write(BufferedImage image, byte[] alpha, ProgressListener progressListener)
 			throws IOException {
@@ -125,6 +123,114 @@ public class PngFileWriter {
 		idat.close();
 	}
 
+	/**
+	 * Write the image to a PNG file with 16-bit color channels.
+	 */
+	public void write16(int width, int height, double[] samples,
+			double exposure, Postprocess postprocess, ProgressListener progressListener)
+			throws IOException {
+		writeChunk(new IHDR(width, height, IHDR.COLOR_TYPE_RGB, 16));
+		IDATWriter idat = new IDATWriter();
+		for (int y = 0; y < height; ++y) {
+			progressListener.setProgress("Writing PNG", y, 0, height);
+			idat.write(IDAT.FILTER_TYPE_NONE); // Scanline header.
+			for (int x = 0; x < width; ++x) {
+				// TODO(jesper): refactor this to fix code duplication.
+				double r = samples[(y*width+x)*3+0];
+				double g = samples[(y*width+x)*3+1];
+				double b = samples[(y*width+x)*3+2];
+
+				r *= exposure;
+				g *= exposure;
+				b *= exposure;
+
+				switch (postprocess) {
+				case NONE:
+					break;
+				case TONEMAP1:
+					r = QuickMath.max(0, r-0.004);
+					r = (r*(6.2*r + .5)) / (r * (6.2*r + 1.7) + 0.06);
+					g = QuickMath.max(0, g-0.004);
+					g = (g*(6.2*g + .5)) / (g * (6.2*g + 1.7) + 0.06);
+					b = QuickMath.max(0, b-0.004);
+					b = (b*(6.2*b + .5)) / (b * (6.2*b + 1.7) + 0.06);
+					break;
+				case GAMMA:
+					r = FastMath.pow(r, 1/Scene.DEFAULT_GAMMA);
+					g = FastMath.pow(g, 1/Scene.DEFAULT_GAMMA);
+					b = FastMath.pow(b, 1/Scene.DEFAULT_GAMMA);
+					break;
+				}
+
+				r = QuickMath.min(1, r);
+				g = QuickMath.min(1, g);
+				b = QuickMath.min(1, b);
+
+				idat.write16((int) (0xFFFF * r + .5));
+				idat.write16((int) (0xFFFF * g + .5));
+				idat.write16((int) (0xFFFF * b + .5));
+			}
+			progressListener.setProgress("Writing PNG", y + 1, 0, height);
+		}
+		idat.close();
+	}
+
+	/**
+	 * Write the image to a PNG file with 16-bit color channels.
+	 */
+	public void write16(int width, int height, double[] samples, byte[] alpha,
+			double exposure, Postprocess postprocess, ProgressListener progressListener)
+			throws IOException {
+		writeChunk(new IHDR(width, height, IHDR.COLOR_TYPE_RGBA, 16));
+		IDATWriter idat = new IDATWriter();
+		int i = 0;
+		for (int y = 0; y < height; ++y) {
+			progressListener.setProgress("Writing PNG", y, 0, height);
+			idat.write(IDAT.FILTER_TYPE_NONE); // Scanline header.
+			for (int x = 0; x < width; ++x) {
+				// TODO(jesper): refactor this to fix code duplication.
+				double r = samples[(y*width+x)*3+0];
+				double g = samples[(y*width+x)*3+1];
+				double b = samples[(y*width+x)*3+2];
+
+				r *= exposure;
+				g *= exposure;
+				b *= exposure;
+
+				switch (postprocess) {
+				case NONE:
+					break;
+				case TONEMAP1:
+					r = QuickMath.max(0, r-0.004);
+					r = (r*(6.2*r + .5)) / (r * (6.2*r + 1.7) + 0.06);
+					g = QuickMath.max(0, g-0.004);
+					g = (g*(6.2*g + .5)) / (g * (6.2*g + 1.7) + 0.06);
+					b = QuickMath.max(0, b-0.004);
+					b = (b*(6.2*b + .5)) / (b * (6.2*b + 1.7) + 0.06);
+					break;
+				case GAMMA:
+					r = FastMath.pow(r, 1/Scene.DEFAULT_GAMMA);
+					g = FastMath.pow(g, 1/Scene.DEFAULT_GAMMA);
+					b = FastMath.pow(b, 1/Scene.DEFAULT_GAMMA);
+					break;
+				}
+
+				r = QuickMath.min(1, r);
+				g = QuickMath.min(1, g);
+				b = QuickMath.min(1, b);
+
+				idat.write16((int) (0xFFFF * r + .5));
+				idat.write16((int) (0xFFFF * g + .5));
+				idat.write16((int) (0xFFFF * b + .5));
+				// TODO(jesper): add real 16-bit alpha channel.
+				idat.write16(alpha[i] << 8);
+				i += 1;
+			}
+			progressListener.setProgress("Writing PNG", y + 1, 0, height);
+		}
+		idat.close();
+	}
+
 	class IDATWriter {
 		Deflater deflater = new Deflater();
 		int inputSize = 0;
@@ -139,6 +245,11 @@ public class PngFileWriter {
 				deflate();
 			}
 			inputBuf[inputSize++] = (byte) b;
+		}
+
+		void write16(int bb) throws IOException {
+			write(bb >> 8);
+			write(bb & 0xFF);
 		}
 
 		private void deflate() throws IOException {
